# zkTransformer-main

./: README.md
src/: CMakeLists.txt  circuit.cpp  circuit.h  global_var.hpp  hyrax.cpp  hyrax.hpp  llama.py  main_demo_llm.cpp  models.cpp  models.hpp  neuralNetwork.cpp  neuralNetwork.hpp  po.py  prompt.py  prover.cpp  prover.hpp  smd.py  utils.cpp  verifier.cpp  verifier.hpp  zkGPT_bindings.cpp
