set(pybind11_DIR "./Antformer/zk+confidential/zkTransformer-main/pybind11/build")
aux_source_directory(. gpt_src)
list(FILTER gpt_src EXCLUDE REGEX "main*")
option(ENABLE_MY_ASSERT "Turn on MY_ASSERT checks" ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
add_library(gpt_lib ${gpt_src})
include_directories($ENV{HOME}/.local/include)

find_package(pybind11 REQUIRED)
add_executable(demo_llm_run main_demo_llm.cpp)
target_link_libraries(demo_llm_run PRIVATE gpt_lib mcl mclbn pybind11:pybind11)